# python-rtmp-streamer

./: Makefile  README.md  pyproject.toml  requirements.txt  setup.py  setup_build.py
docs/: development.md
src/rtmp_streamer/: audio.py  audio.pyi  packet.py  packet.pyi  packet_thread.py  pipe.py  pipe_thread.py  streamer.py  streamer.pyi
tests/: test_mp_pipe.py  test_mp_queue.py  test_mp_shared_ndarray.py  test_packet.py  test_rtmp_streamer.py  test_shared_memory.py  test_threading_queue.py
